# tiliae

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README  configure.sh  configure.txt  exports.sh  file-list.sh  recreate-apt-repo.sh  reflectionCutOut.sh  statistics.sh  tiliae.cmake
benchmark/clangReflection/: Address.cc  Address.h  Address01.h  Address02.cc  Address02.h  Address03.cc  Address03.h  Address04.h  Address05.h  Address06.h  Address07.cc  Address07.h  Address08.h  Address09.cc  Address09.h  Address10.h  CMakeLists.txt  Refl.cc  Reflection.cc  main.cc
parser/: CMakeLists.txt  ReflectionParserAnnotation.h  main.cc
src/: CMakeLists.txt  ReflectionParserAnnotation.h  Reflection_input.cc  Reflection_output_tiliae.cc.h  Tiliae.h
src/beanWrapper/: BeanWrapper.h  IBeanWrapper.h  IPropertyAccessor.h
src/beanWrapper/beanWrapper/: BeanWrapper.cc  BeanWrapper.h
src/beanWrapper/misc/: IndexedEditor.cc  IndexedEditor.h  SimpleMapEditor.cc  SimpleMapEditor.h
src/beanWrapper/plugins/: GetPutMethodRWBeanWrapperPlugin.cc  GetPutMethodRWBeanWrapperPlugin.h  IBeanWrapperPlugin.h  MapPlugin.cc  MapPlugin.h  MethodPlugin.cc  MethodPlugin.h  PropertyRWBeanWrapperPlugin.cc  PropertyRWBeanWrapperPlugin.h
src/beanWrapper/test/: 01BeanWrapperTest.cc  02BeanWrapperErrorsTest.cc  03AutomaticConversionsTest.cc  04IndexedEditorTest.cc  05GetPutTest.cc  06IterTest.cc
src/common/: Context.cc  Context.h  StringUtils.cc  StringUtils.h
src/common/dataSource/: DataSource.h  DataSourceAndroid.cc  DataSourcePC.cc
src/common/handler/: DebugHandler.cc  SingleHandler.h  ZeroHandler.h
src/common/logger/: ConsoleLogger.h  ILogger.h
src/common/path/: IPath.h  ListPath.cc  ListPath.h  Path.h
src/common/test/: 04ContextTest.cc
src/container/: Container.h  ContainerFactory.cc  ContainerFactory.h  Defs.cc  Defs.h
src/container/beanFactory/: BeanFactory.cc  BeanFactory.h  BeanFactoryContainer.cc  BeanFactoryContainer.h  BeanFactoryContext.h  InternalSingletons.cc  InternalSingletons.h
src/container/common/: Attributes.cc  Attributes.h  Common.h  Exceptions.h  SparseVariantMap.h
src/container/inputFormat/: InputFormat.h
src/container/metaStructure/: MetaStructure.h
src/core/: ApiMacro.h  Core.h  DebugContext.h  Exception.cc  Exception.h  IToStringEnabled.cc  Object.h  Pointer.h  StrUtil.h  Typedefs.h
src/core/allocator/: ArrayRegionAllocator.h  IAllocator.h  RegionAllocator.cc
src/core/string/: String.cc  String.h  utf8.h
src/core/test/: 03Variant.cc  04CanCast.cc  06CanCast.cc  07Variant.cc  08String.cc  09Iterator.cc  10Allocator.cc
src/core/variant/: Cast.cc  Cast.h  PtrDeleter.h  Variant.cc  Variant.h
src/editor/: ChainEditor.cc  ChainEditor.h  Editor.h  FactoryEditor.cc  FactoryEditor.h  IEditor.h  IncrementalEditor.cc  IncrementalEditor.h  JEditor.h  LazyEditor.h  LexicalEditor.cc  LexicalEditor.h  ListToStringEditor.cc  ListToStringEditor.h  NoopEditor.h  ProxyEditor.cc  StreamEditor.h  StringConstructorEditor.cc  StringConstructorEditor.h  StringFactoryMethodEditor.cc  TypeEditor.cc  TypeEditor.h
src/editor/mappedEditor/: MappedEditor.cc  MappedEditor.h  PathPair.h  SimpleRule.h
src/editor/test/: 01EditorTest.cc  02TypeEditorTest.cc
src/editor/testHelpers/: DummyIEditor.cc  DummyIEditor.h  DummyJEditor.cc  DummyJEditor.h
src/factory/: ChainFactory.cc  ChainFactory.h  Factory.h  IFactory.h  LazyFactory.h  ProxyFactory.h  ReflectionFactory.cc  ReflectionFactory.h  ScalarFactory.cc  SingletonFactory.h
src/factory/test/: 03ScalarFactoryTest.cc
src/factory/testHelpers/: MegaTon.h  MegaTonFactory.h  SillyFactory.h  TestFactories.h
src/fsmXmi/: XmiParser.cc  XmiParser.h
src/fsmXmi/test/: 01BasicStateTest.cc
src/k202/: Context.cc  Context.h  Exceptions.h  K202.cc  K202.h  Script.h
src/k202/compiler/: Compiler.cc  Compiler.h
src/k202/expression/: ContextDependentSimple.cc  ExpressionCollection.h  IExpression.h  Literal.h  LogicExpression.cc  NArryExpression.cc
src/k202/extension/: CacheExpression.h  CacheExtension.cc  IExtension.h
src/k202/misc/: K202Factory.cc  K202Factory.h  K202Proxy.h
src/k202/test/: 01ParserTest.cc  02RuntimeLiteralsTest.cc  03OperatorsTest.cc  04AssignmentTest.cc  (+3 more)
src/machine/: MachineListener.cc  MachineListener.h
src/reflection/: ClassContainer.cc  ClassContainer.h  Exceptions.h  IClassContainer.h  ListHelper.cc  ListHelper.h  Manager.cc  Manager.h  Reflection.cc  Reflection.h  ReflectionTools.cc  ReflectionTools.h
src/signal/: Functions.cc  Functions.h  Helper.h  Listener.h  Manager.cc  Scope.h  Sender.cc  Sender.h  Signal.h
src/stateMachine/: ChainMachine.h  Exceptions.h  IState.h  Machine.cc  Machine.h  MachineListener.cc  MachineListener.h  State.h  SubMachineState.h
src/testHelpers/: Address.h  Bar.h  City.h  Contractor.h  Country.h  Foo.h  Note.h  Place.h  Telephone.h
src/xml/: XmlException.h
test/: CMakeLists.txt
test/beanWrapper/: 01BeanWrapperTest.cc  02BeanWrapperErrorsTest.cc  04IndexedEditorTest.cc  05GetPutTest.cc  06IterTest.cc
test/common/: 01PathTest.cc
test/core/: 01Variant.cc  02Variant.cc  05CanCast.cc  06CanCast.cc  07Variant.cc  10Allocator.cc
test/editor/: 01EditorTest.cc  02TypeEditorTest.cc
test/factory/: 01FactoryTest.cc
test/fsmXmi/: 01BasicStateTest.cc
test/k202/: 01ParserTest.cc  TestHelpers.h
test/machine/: ActionTest.cc  ContextTest.cc  Helper.h  ShutDownResetTest.cc  StackExtensionTest.cc  TransitionActionsTest.cc
test/reflection/: 01AnnotationTest.cc  02ManagerTest.cc  03ClassTest.cc  04ConstructorTest.cc  05MethodTest.cc  06StandardTypesTest.cc  07MethodWrapper.cc  08GetWrapper.cc  09SetWrapper.cc  13Field.cc  ut_main.cc
test/signal/: 00ListenerTest.cc  01FirstTest.cc  02SenderTest.cc  RemoveTest.cc
test/stateMachine/: ConditionTest.cc  ShutDownResetTest.cc  StackExtensionTest.cc  TransitionTest.cc
test/testHelpers/: A.h  Address.h  Bar.h  City.h  Contractor.h  Country.h  DummyIEditor.h  Foo.h  Helper.h  Note.h  Place.h  Reflection.cc  Reflection_input.cc  Reflection_output.cc.h  Telephone.h  TestFactories.h  TestHelpers.h  User.h  XClass.h
(+1577 files in other folders)
